<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <ImageView
        android:id="@+id/home_logo"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/home_logo"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/home_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/userName"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/home_logo"
        app:layout_constraintBottom_toBottomOf="@id/home_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/point"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toTopOf="@id/charge"
        app:layout_constraintBottom_toBottomOf="@id/charge"
        app:layout_constraintEnd_toStartOf="@id/charge"
        android:textSize="20sp"
        android:textColor="@color/mainColor"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/charge"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="5dp"
        android:src="@drawable/home_charge_background"
        app:layout_constraintTop_toTopOf="@id/home_logo"
        app:layout_constraintBottom_toBottomOf="@id/home_logo"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="TODO" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charge"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/charge"
        app:layout_constraintTop_toTopOf="@id/home_logo"
        app:layout_constraintBottom_toBottomOf="@id/home_logo"
        app:layout_constraintEnd_toEndOf="@id/charge"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment_container"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:defaultNavHost="true"
        app:navGraph="@navigation/navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_logo"
        app:layout_constraintBottom_toTopOf="@+id/main_bottom_navigation"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/main_bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/navi_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nav_host_fragment_container"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>