<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/trainer_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="TODO" />
            <TextView
                android:id="@+id/trainer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trainer_name"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/trainer_profile"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/trainer_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trainer_profile_description"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/trainer_name"
                app:layout_constraintStart_toStartOf="parent"/>
            <ImageView
                android:id="@+id/star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/star"
                app:layout_constraintEnd_toStartOf="@id/rate"
                app:layout_constraintTop_toTopOf="@id/trainer_name"
                android:contentDescription="TODO" />
            <TextView
                android:id="@+id/rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/star"
                app:layout_constraintBottom_toBottomOf="@id/star"/>
            <ImageView
                android:id="@+id/ask_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/chat_background"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintTop_toBottomOf="@id/trainer_description"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="TODO" />
            <TextView
                android:id="@+id/ask_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ask"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="@id/ask_button"
                app:layout_constraintBottom_toBottomOf="@id/ask_button"
                app:layout_constraintStart_toStartOf="@id/ask_button"
                app:layout_constraintEnd_toEndOf="@id/ask_button"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/message_circle"
                android:layout_marginEnd="5dp"
                app:layout_constraintTop_toTopOf="@id/ask_text"
                app:layout_constraintBottom_toBottomOf="@id/ask_text"
                app:layout_constraintEnd_toStartOf="@id/ask_text"
                android:contentDescription="TODO" />
            <ImageView
                android:id="@+id/detail_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/home_detail_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="TODO" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moreDetail"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="@id/detail_button"
                app:layout_constraintBottom_toBottomOf="@id/detail_button"
                app:layout_constraintStart_toStartOf="@id/detail_button"
                app:layout_constraintEnd_toEndOf="@id/detail_button"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>