<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.pay.PayActivity">
    <ImageView
        android:id="@+id/arrow_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/pay_arrow_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="TODO" />
    <ImageView
        android:id="@+id/pay_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/pay_credit"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/pay_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_screen"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/pay_icon"
        app:layout_constraintStart_toStartOf="@id/pay_icon"
        app:layout_constraintEnd_toEndOf="@id/pay_icon"/>
    <ImageView
        android:id="@+id/pay_month_bg"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:src="@drawable/pay_rectangle"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/pay_tv"
        app:layout_constraintStart_toStartOf="parent"/>
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_monthly"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/pay_month_bg"
        app:layout_constraintStart_toStartOf="@id/pay_month_bg"
        app:layout_constraintEnd_toEndOf="@id/pay_month_bg"
        app:layout_constraintBottom_toBottomOf="@id/pay_month_bg"/>
    <ImageView
        android:id="@+id/pay_once_bg"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:src="@drawable/pay_rectangle"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/pay_tv"
        app:layout_constraintEnd_toEndOf="parent"/>
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/askOnce"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/pay_once_bg"
        app:layout_constraintStart_toStartOf="@id/pay_once_bg"
        app:layout_constraintEnd_toEndOf="@id/pay_once_bg"
        app:layout_constraintBottom_toBottomOf="@id/pay_once_bg"/>
    <ImageView
        android:id="@+id/pay_point_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pay_bg"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/pay_once_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="TODO" />
    <TextView
        android:id="@+id/my_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="기존 Point"
        android:textColor="@color/material_dynamic_primary0"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="@id/pay_point_bg"
        app:layout_constraintStart_toStartOf="@id/pay_point_bg"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/point"
        app:layout_constraintTop_toBottomOf="@id/my_point"
        app:layout_constraintStart_toStartOf="@id/my_point"
        app:layout_constraintEnd_toEndOf="@id/my_point"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="@id/pay_point_bg"
        app:layout_constraintBottom_toBottomOf="@id/pay_point_bg"
        app:layout_constraintStart_toEndOf="@id/my_point"
        app:layout_constraintEnd_toStartOf="@id/pay_point"/>
    <TextView
        android:id="@+id/pay_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="차감 Point"
        android:textColor="@color/material_dynamic_primary0"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="@id/pay_point_bg"
        app:layout_constraintStart_toStartOf="@id/pay_point_bg"
        app:layout_constraintEnd_toEndOf="@id/pay_point_bg"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1000 p"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/pay_point"
        app:layout_constraintStart_toStartOf="@id/pay_point"
        app:layout_constraintEnd_toEndOf="@id/pay_point"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="="
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="@id/pay_point_bg"
        app:layout_constraintBottom_toBottomOf="@id/pay_point_bg"
        app:layout_constraintStart_toEndOf="@id/pay_point"
        app:layout_constraintEnd_toStartOf="@id/left_point"/>
    <TextView
        android:id="@+id/left_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="잔액 Point"
        android:textColor="@color/material_dynamic_primary0"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="@id/pay_point_bg"
        app:layout_constraintEnd_toEndOf="@id/pay_point_bg"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="9000 p"
        android:textColor="@color/mainColor"
        app:layout_constraintTop_toBottomOf="@id/left_point"
        app:layout_constraintStart_toStartOf="@id/left_point"
        app:layout_constraintEnd_toEndOf="@id/left_point"/>

    <TextView
        android:id="@+id/trainer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trainer_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="@id/profile_iv"
        app:layout_constraintBottom_toBottomOf="@id/profile_iv"
        app:layout_constraintStart_toEndOf="@id/profile_iv"/>
    <ImageView
        android:id="@+id/favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/favorite_filled"
        app:layout_constraintBottom_toTopOf="@id/trainer_name"
        app:layout_constraintStart_toStartOf="@id/trainer_name"/>
    <TextView
        android:id="@+id/favorite_counts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="170"
        android:textColor="@color/mainColor"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="6dp"
        app:layout_constraintBottom_toTopOf="@id/trainer_name"
        app:layout_constraintStart_toEndOf="@id/favorite"/>
    <ImageView
        android:id="@+id/profile_iv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/like_profile"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pay_point_bg"/>
    <ImageView
        android:id="@+id/pay_bg"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:src="@drawable/pay_charge_bg"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/profile_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="TODO" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="결제하기"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/pay_bg"
        app:layout_constraintBottom_toBottomOf="@id/pay_bg"
        app:layout_constraintStart_toStartOf="@id/pay_bg"
        app:layout_constraintEnd_toEndOf="@id/pay_bg"/>


</androidx.constraintlayout.widget.ConstraintLayout>