<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.home.HomeFragment">



    <TextView
        android:id="@+id/my_subscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imanyfind"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/trainer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trainer_name"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/my_subscribe"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"/>

    <ImageView
        android:id="@+id/favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/favorite_filled"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/trainer_name"
        app:layout_constraintTop_toTopOf="@id/trainer_name"
        app:layout_constraintBottom_toBottomOf="@id/trainer_name"/>

    <TextView
        android:id="@+id/favorite_counts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="170"
        android:textColor="@color/mainColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/favorite"
        app:layout_constraintBottom_toBottomOf="@id/favorite"/>
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/profile_mysub"
        android:layout_marginStart="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/favorite_counts"
        app:layout_constraintTop_toTopOf="@id/favorite_counts"
        app:layout_constraintBottom_toBottomOf="@id/favorite_counts"/>

    <ImageView
        android:id="@+id/spinner_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sort_background"
        app:layout_constraintTop_toBottomOf="@id/trainer_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"/>
    <TextView
        android:id="@+id/sort_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="인기순"
        android:layout_marginStart="14dp"
        app:layout_constraintTop_toTopOf="@id/spinner_1"
        app:layout_constraintBottom_toBottomOf="@id/spinner_1"
        app:layout_constraintStart_toStartOf="@id/spinner_1"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_down"
        android:layout_marginEnd="4dp"
        app:layout_constraintStart_toEndOf="@id/sort_1"
        app:layout_constraintTop_toTopOf="@id/sort_1"
        app:layout_constraintBottom_toBottomOf="@id/sort_1"
        app:layout_constraintEnd_toEndOf="@id/spinner_1"/>

    <ImageView
        android:id="@+id/subscribe_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sort_background"
        app:layout_constraintStart_toEndOf="@id/spinner_1"
        app:layout_constraintTop_toBottomOf="@id/trainer_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="구독"
        app:layout_constraintTop_toTopOf="@id/subscribe_button"
        app:layout_constraintBottom_toBottomOf="@id/subscribe_button"
        app:layout_constraintStart_toStartOf="@id/subscribe_button"
        app:layout_constraintEnd_toEndOf="@id/subscribe_button"/>

    <ImageView
        android:id="@+id/onetime_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sort_background"
        app:layout_constraintStart_toEndOf="@id/subscribe_button"
        app:layout_constraintTop_toBottomOf="@id/trainer_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onetime"
        app:layout_constraintTop_toTopOf="@id/onetime_button"
        app:layout_constraintBottom_toBottomOf="@id/onetime_button"
        app:layout_constraintStart_toStartOf="@id/onetime_button"
        app:layout_constraintEnd_toEndOf="@id/onetime_button"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/onetime_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_home" />


</androidx.constraintlayout.widget.ConstraintLayout>